<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_assets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/icon_chair"
            android:title="@string/menu_assets" />
        <item
            android:id="@+id/nav_employees"
            android:icon="@drawable/icon_employee"
            android:title="@string/menu_employees" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/icon_location"
            android:title="@string/menu_locations" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/icon_inventory"
            android:title="@string/menu_inventory" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>