<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_assets">

    <fragment
        android:id="@+id/nav_assets"
        android:name="com.example.assetmanagementsystem.ui.assets.AssetsFragment"
        android:label="@string/menu_assets"
        tools:layout="@layout/fragment_assets" >
        <action
            android:id="@+id/action_nav_assets_to_nav_add_asset"
            app:destination="@id/nav_add_asset" />
    </fragment>

    <fragment
        android:id="@+id/nav_employees"
        android:name="com.example.assetmanagementsystem.ui.employees.EmployeesFragment"
        android:label="@string/menu_employees"
        tools:layout="@layout/fragment_employees" >
        <action
            android:id="@+id/action_nav_employees_to_nav_add_employee"
            app:destination="@id/nav_add_employee" />
    </fragment>

    <fragment
        android:id="@+id/nav_locations"
        android:name="com.example.assetmanagementsystem.ui.locations.LocationsFragment"
        android:label="@string/menu_locations"
        tools:layout="@layout/fragment_locations" >
        <action
            android:id="@+id/action_nav_locations_to_nav_add_location"
            app:destination="@id/nav_add_location" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.assetmanagementsystem.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.example.assetmanagementsystem.ui.inventory.InventoryFragment"
        android:label="@string/menu_inventory"
        tools:layout="@layout/fragment_inventory" />
    <fragment
        android:id="@+id/nav_add_employee"
        android:name="com.example.assetmanagementsystem.ui.employees.addemployee.AddEmployeeFragment"
        android:label="@string/add_employee"
        tools:layout="@layout/fragment_add_employee" >
        <action
            android:id="@+id/action_nav_add_employee_to_nav_employees"
            app:destination="@id/nav_employees" />
    </fragment>
    <fragment
        android:id="@+id/nav_add_location"
        android:name="com.example.assetmanagementsystem.ui.locations.addlocation.AddLocationFragment"
        android:label="@string/add_location"
        tools:layout="@layout/fragment_add_location" >
        <action
            android:id="@+id/action_nav_add_location_to_nav_locations"
            app:destination="@id/nav_locations" />
    </fragment>
    <fragment
        android:id="@+id/nav_add_asset"
        android:name="com.example.assetmanagementsystem.ui.assets.addasset.AddAssetFragment"
        android:label="@string/add_asset"
        tools:layout="@layout/fragment_add_asset">
        <action
            android:id="@+id/action_nav_add_asset_to_nav_assets"
            app:destination="@id/nav_assets" />
    </fragment>
</navigation>