<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inventory.InventoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/CustomLinearLayoutForLists">
        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_assetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="20dp"
            app:queryHint="@string/search_by_name"
            android:imeOptions="actionSearch"
            android:layout_marginBottom="15dp"
            />
        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_newEmployee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="20dp"
            app:queryHint="@string/search_by_new_employee"
            android:imeOptions="actionSearch"
            android:layout_marginBottom="15dp"
            />
        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_newLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="20dp"
            app:queryHint="@string/search_by_new_location"
            android:imeOptions="actionSearch"
            android:layout_marginBottom="15dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_inventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />
</androidx.constraintlayout.widget.ConstraintLayout>